feat: enhance matrix support in action inputs and summary
- Added `matrixLabel` and `matrixContext` to ActionInputs interface.
- Implemented parsing of `matrix-context` input as a JSON object.
- Auto-generate `matrixLabel` from context values if not explicitly set.
- Updated output to include `matrixLabel` in action results.
- Built environment variables for matrix context and label in the runner.
- Enhanced summary output to display matrix context in a table format.

--- a/action.yml
+++ b/action.yml
@@ -42,12 +42,22 @@ inputs:
     description: "Show plan without executing"
     required: false
     default: "false"
+  matrix-label:
+    description: "Label for this matrix leg (e.g., 'Node 20 / Linux')"
+    required: false
+    default: ""
+  matrix-context:
+    description: "JSON object of matrix variables to pass as DAGRYN_MATRIX_* env vars"
+    required: false
+    default: ""
 
 outputs:
   status:
     description: "Run status (success / failure)"
   duration:
     description: "Total duration in seconds"
+  matrix-label:
+    description: "The matrix label for this leg"
 
 runs:
   using: "node20"
